# libvzctl

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  paths.am  pathsubst.am  targets.list
dists/: Makefile.am  centos.conf  debian.conf  default  distribution.conf-template  fedora-core.conf  gentoo.conf  mandrake.conf  redhat-7.1.conf  redhat-7.2.conf  redhat-7.3.conf  redhat.conf  rhel-3.conf  rhel-4.conf  slackware-9.0.conf  slackware-9.1.conf  slackware.conf  sles.conf  suse-7.3.conf  suse-8.0.conf  suse-8.2.conf  suse.conf  unknown.conf
dists/scripts/: debian-add_ip.sh  debian-add_netif.sh  debian-del_ip.sh  debian-del_netif.sh  debian-post_migrate.sh  debian-set_hostname.sh  debian-set_ugid_quota.sh  debian-set_userpass.sh  debian-v2pmigrate-excludes.sh  functions  gentoo-add_ip.sh  gentoo-add_netif.sh  gentoo-del_ip.sh  gentoo-del_netif.sh  gentoo-post_migrate.sh  gentoo-set_hostname.sh  gentoo-set_ugid_quota.sh  gentoo-v2pmigrate-excludes.sh  postcreate.sh  redhat-7.x_add_ip.sh  redhat-add_ip.sh  redhat-add_netif.sh  redhat-del_ip.sh  redhat-del_netif.sh  redhat-post_migrate.sh  redhat-set_hostname.sh  redhat-v2pmigrate-excludes.sh  set_console.sh  set_dns.sh  set_ugid_quota.sh  set_userpass.sh  slackware-9.x_add_ip.sh  slackware-9.x_del_ip.sh  slackware-add_ip.sh  slackware-del_ip.sh  slackware-post_migrate.sh  slackware-set_hostname.sh  slackware-set_ugid_quota.sh  slackware-v2pmigrate-excludes.sh  suse-7.x_add_ip.sh  (+17 more)
include/: libvzctl.h
lib/: Makefile.am  bindmount.c  bindmount.h  bitmap.c  bitmap.h  cap.c  cap.h  cgroup.c  cgroup.h  cleanup.c  cleanup.h  cluster.c  cluster.h  common.c  common.h  config.c  config.h  cpt.c  cpt.h  cpu.c  cpu.h  cr_criu.c  create.c  create.h  destroy.c  destroy.h  dev.c  dev.h  disk.c  disk.h  disk_configure.c  dist.c  dist.h  env.c  env.h  env_config.c  env_config.h  env_configure.c  env_configure.h  env_nsops.c  (+78 more)
lib/include/linux/: cpt_ioctl.h  vzcalluser.h  vzctl_netstat.h  vziolimit.h  vziptable_defs.h
lib/include/ub/: beancounter.h
scripts/: Makefile.am  cgroup-props.conf.in  vz-announce_ips.in  vz-cpt-action.in  vz-cpt.in  vz-create_prvt.in  vz-functions.in  vz-net_add.in  vz-net_del.in  vz-netns_dev_add.in  vz-netns_dev_del.in  vz-pci_configure.in  vz-postinst.in  vz-rst-action.in  vz-rst.in  vz-setrate.in  vz-start.in  vz-stop.in  vznetcfg.in
src/: Makefile.am  action_wrap.c  exec_wrap.c
test/: Makefile.am  test.c  test.h  test_config.c  test_vzctl.c  vzctl.c
vztcmuctl/: domain.go  event.go  lv.go  systemd.go  tg.go  util.go  vztcmuctl.go
